// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Navigation/ErrorPages/404 Default 1`] = `
<div
  className="sc-bdfBwQ gFQERV"
>
  <div
    className="sc-gTgzIj diMhbt sc-error-page404"
  >
    <div
      className="sc-eJMQSu eKmyWr"
    >
      <i
        className="sc-nFpLZ GjXFB fas fa-exclamation-triangle fa-2x"
      />
      <h2
        className="sc-laRPJI bCmSib"
      >
        Error: this page does not exist
      </h2>
    </div>
    <div
      className="sc-eJMQSu eKmyWr"
    >
      <div
        className="sc-iNqMTl dEmFSA"
      >
        <p
          className="sc-jeGSBP hUmgeT"
        >
          It might be the wrong address or the page has moved.
        </p>
        <p
          className="sc-jeGSBP hUmgeT"
        >
          You might check the url, or contact your admin if the error remains.
        </p>
      </div>
    </div>
    <a
      className="sc-fodVxV gdXFRf sc-button"
      disabled={false}
      href="/"
      size="large"
      title=""
    >
      <span
        className="sc-kstrdz ZegCk"
      >
        Return Home
      </span>
    </a>
  </div>
</div>
`;

exports[`Storyshots Components/Navigation/ErrorPages/404 With Locale 1`] = `
<div
  className="sc-bdfBwQ gFQERV"
>
  <div
    className="sc-gTgzIj diMhbt sc-error-page404"
  >
    <div
      className="sc-eJMQSu eKmyWr"
    >
      <i
        className="sc-nFpLZ GjXFB fas fa-exclamation-triangle fa-2x"
      />
      <h2
        className="sc-laRPJI bCmSib"
      >
        Erreur: cette page n'existe pas
      </h2>
    </div>
    <div
      className="sc-eJMQSu eKmyWr"
    >
      <div
        className="sc-iNqMTl dEmFSA"
      >
        <p
          className="sc-jeGSBP hUmgeT"
        >
          Il se peut que ce soit une mauvaise adresse ou que la page ait été déplacée.
        </p>
        <p
          className="sc-jeGSBP hUmgeT"
        >
          Vous pouvez vérifier l'url, ou contacter votre administrateur si l'erreur persiste.
        </p>
      </div>
    </div>
    <a
      className="sc-fodVxV gdXFRf sc-button"
      disabled={false}
      href="/"
      size="large"
      title=""
    >
      <span
        className="sc-kstrdz ZegCk"
      >
        Retour à l'accueil
      </span>
    </a>
  </div>
</div>
`;
